--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
 <head>
   <meta charset="utf-8">
   <title>ⒹDurai's Personal site</title>
+  <style media="screen">
+    body{
+      background-color: #F5F0BB;
+    }
+    hr{
+      background-color: white;
+      border-style: none;
+      height: 0px;
+      width: 33%;
+      border-top-style: dotted;
+      border-color: grey;
+      border-width: 20px;
+    }
+  </style>
 </head>
 
 <body>
